--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -1,10 +1,3 @@
-.new-comment-tools {
-    color: #707070;
-    position: absolute;
-    bottom: 10px;
-    right: 25px;
-}
-
 .new-comment-tools > i {
     margin: 0;
 }
@@ -100,14 +93,6 @@ span.new-comment-tools {
     position: absolute;
     right: 0;
     bottom: 0;
-}
-
-label[for=comment-attach] {
-    position: relative;
-    bottom: 0px;
-    right: 20px;
-    top: auto;
-    left: auto;
 }
 
 #comment {
@@ -237,4 +222,47 @@ label[for=comment-attach] {
     top: 50%;
     transform: translateY(-50%);
     right: -105px;
+}
+
+.send-comment-container {
+    position: relative;
+    width: 100%;
+}
+
+.send-comment-container .comment-input {
+    position: relative;
+    display: inline-block;
+    width: calc(100% - 40px);
+    border-radius: 10px;
+}
+.send-comment-container .comment-input textarea {
+    position: relative;
+    width: calc(100% - 40px);
+    border-color: transparent!important;
+    margin: 0!important;
+}
+.send-comment-container .comment-input .new-comment-tools {
+    color: #707070;
+    position: relative;
+    float: left;
+}
+
+.send-comment-container .comment-input .new-comment-tools label[for=comment-attach] {
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    top: 0;
+    left: 0;
+    margin: 0;
+    right: auto;
+}
+.send-comment-container .image-btn-circle {
+    position: relative;
+    display: inline-block;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
