--- a/expert/templates/expert/layouts/comment.html
+++ b/expert/templates/expert/layouts/comment.html
@@ -7,19 +7,25 @@
             <form action="" method="POST" enctype="multipart/form-data" id="comment-form">
                 {% csrf_token %}
                 <div class="row">
-                    <input type="text" class="project_id" name="project_id" value="" hidden>
-                    <input type="text" class="researcher_id" name="researcher_id" value="" hidden>
-                    <input type="text" name="comment_replyed" id="comment_replyed" value="None" hidden>
                     <div class="col-lg-12">
-                        <label for="description">ثبت نظر جدید</label>
-                        <textarea dir="rtl" id="description" class="w-100 emojiable-option" name="description"
-                                  rows="5"></textarea>
-                        <button class="chamran_btn" type="submit" style="left: 16px;bottom: 8px;">ثبت نظر</button>
-                        <span class="new-comment-tools">
-                            <input type="file" id="comment-attach" name="attachment" hidden>
-                            <label for="comment-attach"><i class="fas fa-paperclip"></i></label>
-                        </span>
-                        <div class="attachment"></div>
+                        <input type="text" class="project_id" name="project_id" value="" hidden>
+                        <input type="text" class="researcher_id" name="researcher_id" value="" hidden>
+                        <input type="text" name="comment_replyed" id="comment_replyed" value="None" hidden>
+                        <div class="send-comment-container">
+                            <button class="image-btn-circle" type="submit"></button>
+                            <div class="comment-input">
+                                <label for="description"></label>
+                                <textarea dir="rtl" id="description" class="" name="description" rows="1"
+                                          placeholder="نظر خود را اینجا وارد کنید ..."></textarea>
+
+                                <div class="new-comment-tools">
+                                    <input type="file" id="comment-attach" name="attachment" hidden>
+                                    <label for="comment-attach"><i class="fas fa-paperclip"></i></label>
+                                </div>
+
+                                <div class="attachment"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
