--- a/expert/templates/expert/layouts/showProject.html
+++ b/expert/templates/expert/layouts/showProject.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mbottom-lg-25">
+            <div class="row">
                 <div class="col-lg-12 text-right">
                     {% include 'expert/layouts/comment.html' %}
                 </div>
