--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,7 @@
 }
 
 body {
+    direction: ltr;
     background-color: #f8fdf7;
     font-family: iranyekan, serif;
     font-weight: 300;
@@ -942,6 +943,7 @@ hr {
 }
 
 .list-group, .list-group-item {
+    direction: ltr;
     border: none;
     background-color: transparent;
     transition: all 200ms ease;
@@ -2777,4 +2779,30 @@ a.top-button i {
 
 span.initial-value {
     display: inline-block;
+}
+
+.image-btn-circle {
+    background-image: url("../img/send.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-origin: content-box;
+    padding: 5px;
+    width: 35px;
+    height: 35px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-transition: all ease 0.2s;
+    -moz-transition: all ease 0.2s;
+    -ms-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
+    transition: all ease 0.2s;
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
+.image-btn-circle:hover {
+    background-image: url("../img/send-hover.svg");
+    background-color: #3CCD1C;
 }
