complete comments design and attachment

--- a/expert/templates/expert/layouts/comment.html
+++ b/expert/templates/expert/layouts/comment.html
@@ -23,7 +23,11 @@
                                     <label for="comment-attach"><i class="fas fa-paperclip"></i></label>
                                 </div>
 
-                                <div class="attachment"></div>
+                                <div class="attachment">
+                                    <i class="fas fa-paperclip"></i>
+                                    <span></span>
+                                    <i class="far fa-trash-alt"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
