--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -73,21 +73,21 @@
 /*  background-color: #f8fdf7;*/
 /*  border-bottom: 1px solid #bdbdbd;*/
 /*}*/
-.fa-paperclip, .fa-pen, .fa-trash-alt, .fa-reply, .fa-smile {
-    border: 1px solid transparent;
-    padding: 6px;
-    background-color: transparent;
-    border-radius: 3px;
-}
+/*.fa-paperclip, .fa-pen, .fa-trash-alt, .fa-reply, .fa-smile {*/
+/*    border: 1px solid transparent;*/
+/*    padding: 6px;*/
+/*    background-color: transparent;*/
+/*    border-radius: 3px;*/
+/*}*/
 
-.fa-paperclip:hover, .fa-pen:hover, .fa-trash-alt:hover, .fa-reply:hover, .fa-smile:hover {
-    cursor: pointer;
-    color: #3ccd1c;
-    border: 1px solid #3ccd1c;
-    padding: 6px;
-    background-color: transparent;
-    border-radius: 3px;
-}
+/*.fa-paperclip:hover, .fa-pen:hover, .fa-trash-alt:hover, .fa-reply:hover, .fa-smile:hover {*/
+/*    cursor: pointer;*/
+/*    color: #3ccd1c;*/
+/*    border: 1px solid #3ccd1c;*/
+/*    padding: 6px;*/
+/*    background-color: transparent;*/
+/*    border-radius: 3px;*/
+/*}*/
 
 span.new-comment-tools {
     position: absolute;
@@ -231,16 +231,35 @@ span.new-comment-tools {
 
 .send-comment-container .comment-input {
     position: relative;
-    display: inline-block;
-    width: calc(100% - 40px);
+    float: left;
+    display: flex;
+    width: calc(100% - 45px);
     border-radius: 10px;
+    background-color: #e0e1e270;
 }
+
+.send-comment-container .comment-input.attached {
+    padding-bottom: 25px;
+}
+
 .send-comment-container .comment-input textarea {
     position: relative;
     width: calc(100% - 40px);
-    border-color: transparent!important;
-    margin: 0!important;
+    border-color: transparent !important;
+    margin: 0 !important;
+    background-color: transparent;
+    text-align: justify;
+    /*background-color: #cacbcd;*/
 }
+
+.send-comment-container .comment-input.attached textarea {
+    width: 100%;
+}
+
+.send-comment-container .comment-input label.full-focus-out:after {
+    display: none;
+}
+
 .send-comment-container .comment-input .new-comment-tools {
     color: #707070;
     position: relative;
@@ -251,18 +270,129 @@ span.new-comment-tools {
     position: absolute;
     width: 35px;
     height: 35px;
-    top: 0;
-    left: 0;
+    top: calc(100% - 3px);
+    transform: translateY(-100%);
+    left: -37px;
     margin: 0;
     right: auto;
+    background-color: #cacbcd70;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    color: rgba(0, 0, 0, 0.6);
+    -webkit-transition: all ease 0.2s;
+    -moz-transition: all ease 0.2s;
+    -ms-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
+    transition: all ease 0.2s;
 }
+
+.send-comment-container .comment-input.attached .new-comment-tools label[for=comment-attach] {
+    display: none;
+}
+
+.send-comment-container .comment-input .new-comment-tools label[for=comment-attach]:hover {
+    cursor: pointer;
+    background-color: #a0a2a570;
+}
+
+.send-comment-container .comment-input .new-comment-tools label[for=comment-attach] i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.send-comment-container .comment-input .attachment {
+    display: none;
+}
+
+.send-comment-container .comment-input.attached .attachment {
+    position: absolute;
+    padding: 5px 15px;
+    bottom: 3px;
+    left: 4px;
+    display: block;
+    background-color: #cacbcd70;
+    -webkit-border-radius: 0.25em;
+    -moz-border-radius: 0.25em;
+    border-radius: 0.25em;
+    color: rgba(0, 0, 0, 0.6);
+    -webkit-transition: all ease 0.2s;
+    -moz-transition: all ease 0.2s;
+    -ms-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
+    transition: all ease 0.2s;
+}
+
+.send-comment-container .comment-input.attached .attachment:hover {
+    cursor: pointer;
+    padding-left: 35px;
+    background-color: #a0a2a570;
+}
+
+.send-comment-container .comment-input.attached .attachment i.fa-trash-alt {
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 10px;
+    height: 29px;
+    color: #ffffff;
+    -webkit-transition: all ease 0.2s;
+    -moz-transition: all ease 0.2s;
+    -ms-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
+    transition: all ease 0.2s;
+}
+
+.send-comment-container .comment-input.attached .attachment:hover i.fa-trash-alt {
+    width: 29px;
+    visibility: visible;
+    -webkit-border-radius: 0.25em 50% 50% 0.25em;
+    -moz-border-radius: 0.25em 50% 50% 0.25em;
+    border-radius: 0.25em 50% 50% 0.25em;
+    background-color: #FF7C7C;
+}
+
+.send-comment-container .comment-input.attached .attachment:hover i.fa-trash-alt:hover {
+    background-color: #ff4545;
+}
+
+/*.send-comment-container .comment-input.attached .attachment i.fa-trash-alt:after {*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    left: 0;*/
+/*    top: 0;*/
+/*    width: 29px;*/
+/*    height: 29px;*/
+/*    -webkit-border-radius: 0 50% 50% 0;*/
+/*    -moz-border-radius: 0 50% 50% 0;*/
+/*    border-radius: 0 50% 50% 0;*/
+/*    background-color: #ff4545;*/
+/*}*/
+.send-comment-container .comment-input.attached .attachment i.fa-trash-alt:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    visibility: hidden;
+    -webkit-transition: all ease 0.2s;
+    -moz-transition: all ease 0.2s;
+    -ms-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
+    transition: all ease 0.2s;
+}
+
+.send-comment-container .comment-input.attached .attachment:hover i.fa-trash-alt:before {
+    visibility: visible;
+}
+
 .send-comment-container .image-btn-circle {
     position: relative;
-    display: inline-block;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
+    top: 0;
 }
