--- a/templates/chamran_admin/messages.html
+++ b/templates/chamran_admin/messages.html
@@ -14,6 +14,11 @@
 {% endblock %}
 
 {% block content %}
+    <div class="row">
+        <div class="col-12 text-right">
+            <h3 class="h3 p-top-15 border-bottom">پیام ها</h3>
+        </div>
+    </div>
     <div class="card info-card messaging">
         <div class="row">
             <div class="col-lg-12">
