--- a/expert/templates/expert/layouts/show_question.html
+++ b/expert/templates/expert/layouts/show_question.html
@@ -19,8 +19,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <label for="question-body" class="fix">توضیح سوال</label>
-                    <textarea dir="rtl" rows="15" class="w-100" id="question-body" name="question_body" disabled></textarea>
+                    <div class="pre-header">
+                        <span>متن سوال</span>
+                    </div>
+                    <pre dir="rtl" class="w-100" id="question-body"></pre>
                 </div>
             </div>
             <div class="row">
