--- a/expert/templates/expert/layouts/show_question.html
+++ b/expert/templates/expert/layouts/show_question.html
@@ -35,120 +35,16 @@
                                     <span class="attach-name">ضمیمه ای وجود ندارد</span>
                                 </a>
                             </li>
-{#                            <li class="list-item">#}
-{#                                <a href="#" class="attach-file">#}
-{#                                    <span class="png-file"></span>#}
-{#                                    <span>fileName</span>#}
-{#                                </a>#}
-{#                            </li>#}
-{#                            <li class="list-item">#}
-{#                                <a href="#" class="attach-file">#}
-{#                                    <span class="pdf-file"></span>#}
-{#                                    <span>fileName</span>#}
-{#                                </a>#}
-{#                            </li>#}
-{#                            <li class="list-item">#}
-{#                                <a href="#" class="attach-file" data-toggle="popover" title="j" data-content="12" data-placement="top">#}
-{#                                    <span class="jpg-file"></span>#}
-{#                                    <span>fileName</span>#}
-{#                                </a>#}
-{#                            </li>#}
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="divider-head">
-                        <hr>
-                        <span>پاسخ</span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <button class="default-btn close-answer">بستن پاسخ</button>
-                </div>
-            </div>
-            <div class="row all-answers">
-                <div class="col-lg-12">
-                    <div class="answer answer-3">
-                        <span class="title">پاسخ سوم</span>
-                        <span class="date">1398/5/22</span>
-                        <div></div>
-                        <div class="check">
-                            <div class="correct">
-                                <button type="button" title="صحیح">
-                                    <i class="fas fa-check"></i>
-                                </button>
-                            </div>
-                            <div class="wrong">
-                                <button type="button" title="نادرست">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                            <div class="status"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="answer answer-2">
-                        <span class="title">پاسخ دوم</span>
-                        <span class="date">1398/5/22</span>
-                        <div>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. </div>
-                        <div class="check">
-                            <div class="correct">
-                                <button type="button" title="صحیح">
-                                    <i class="fas fa-check"></i>
-                                </button>
-                            </div>
-                            <div class="wrong">
-                                <button type="button" title="نادرست">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                            <div class="status"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="answer answer-1">
-                        <span class="title">پاسخ اول</span>
-                        <span class="date">1398/5/22</span>
-                        <div>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه مجله در ستون و سطر آنچنان.</div>
-                        <div class="check">
-                            <div class="correct">
-                                <button type="button" title="صحیح">
-                                    <i class="fas fa-check"></i>
-                                </button>
-                            </div>
-                            <div class="wrong">
-                                <button type="button" title="نادرست">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                            <div class="status"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="answer answer-1">
-                        <span class="title">پاسخ اول</span>
-                        <span class="date">1398/5/22</span>
-                        <div>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه مجله در ستون و سطر آنچنان.</div>
-                        <div class="check">
-                            <div class="correct">
-                                <button type="button" title="صحیح">
-                                    <i class="fas fa-check"></i>
-                                </button>
-                            </div>
-                            <div class="wrong">
-                                <button type="button" title="نادرست">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                            <div class="status"></div>
-                        </div>
+                    <span class="section-title">پاسخ ها</span>
+                    <button class="default-btn close-answer">بستن پاسخ جدید</button>
+                    <div class="section">
+                        <div class="row all-answers"></div>
                     </div>
                 </div>
             </div>
