--- a/static/css/style.css
+++ b/static/css/style.css
@@ -213,6 +213,10 @@ img {
     transform: none;
 }
 
+.fixed-back > .card.b-x0 {
+    padding-bottom: 35px;
+}
+
 @media (max-width: 767px) {
     .fixed-back > .card {
         top: 100%;
@@ -1807,24 +1811,17 @@ button:hover, button:focus {
     border: .2em solid rgba(0, 0, 0, .15);
 }
 
+.loading-btn.left-side:before {
+    left: 5px;
+}
+
 .loading-btn:after {
-    position: absolute;
-    content: '';
+    left: 5px;
+}
+
+.loading-btn.left-side:after {
     top: 50%;
     left: 50%;
-    margin: -.64285714em 0 0 -.64285714em;
-    width: 1.28571429em;
-    height: 1.28571429em;
-    -webkit-animation: button-spin .6s linear;
-    animation: button-spin .6s linear;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    border-radius: 500rem;
-    border-color: #fff transparent transparent;
-    border-style: solid;
-    border-width: .2em;
-    -webkit-box-shadow: 0 0 0 1px transparent;
-    box-shadow: 0 0 0 1px transparent;
 }
 
 @-webkit-keyframes button-spin {
@@ -2806,6 +2803,7 @@ span.initial-value {
     background-image: url("../img/send-hover.svg");
     background-color: #3CCD1C;
 }
+
 pre {
     font-family: iranyekan, serif;
     margin: 0;
@@ -2815,11 +2813,39 @@ pre {
     white-space: -o-pre-wrap;
     white-space: pre-wrap;
 }
+
 pre#question-body {
     min-height: 200px;
 }
+
 .pre-header {
     color: #3CCD1C;
     font-weight: 400;
     margin-bottom: 10px;
+}
+
+.message {
+    position: relative;
+    text-align: right;
+    direction: rtl;
+    min-height: 1em;
+    margin: 1em 0;
+    background: #f8f8f9;
+    padding: 1em 1.5em;
+    line-height: 0.7em;
+    color: rgba(0, 0, 0, .87);
+    -webkit-transition: opacity .1s ease, color .1s ease, background .1s ease, -webkit-box-shadow .1s ease;
+    transition: opacity .1s ease, color .1s ease, background .1s ease, -webkit-box-shadow .1s ease;
+    transition: opacity .1s ease, color .1s ease, background .1s ease, box-shadow .1s ease;
+    transition: opacity .1s ease, color .1s ease, background .1s ease, box-shadow .1s ease, -webkit-box-shadow .1s ease;
+    border-radius: .28571429rem;
+    -webkit-box-shadow: 0 0 0 1px rgba(34, 36, 38, .22) inset, 0 0 0 0 transparent;
+    box-shadow: 0 0 0 1px rgba(34, 36, 38, .22) inset, 0 0 0 0 transparent;
+}
+
+.message.info {
+    background-color: #e1f7f7;
+    color: #10a3a3;
+    -webkit-box-shadow: 0 0 0 1px #10a3a3 inset, 0 0 0 0 transparent;
+    box-shadow: 0 0 0 1px #10a3a3 inset, 0 0 0 0 transparent;
 }
